# Meta_Extractor

./: .env.example  .gitignore  LICENSE  README.md  playwright.config.py  pyproject.toml  requirements.txt  run.py  schema.sql
rpd/: __init__.py  config.py  database.py  db_models.py  db_service.py  main.py  models.py
rpd/api/: __init__.py  comparison.py  extraction.py  ingest.py  links.py
rpd/services/: __init__.py  comparison_engine.py  content_extractor.py  extraction_pipeline.py  file_identifier.py  geolocation.py  metadata_extractor.py  rule_loader.py
rpd/static/: index.html  intranet.html
rpd/static/css/: style.css
rpd/static/js/: app.js
rule_packs/: critical_fields.yaml
schemas/: comparison_report.schema.json  extraction_result.schema.json
scripts/: install_and_run.bat  install_and_run.sh
tests/: __init__.py  test_api_integration.py  test_extraction.py  test_geolocation.py
tests/e2e/: test_api_playwright.py
