[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpd-meta-extractor"
version = "0.1.0"
description = "Universal File Metadata & Extraction Comparison Service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RPD" }]
keywords = ["metadata", "extraction", "comparison", "document-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "filetype>=1.2.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "pdfplumber>=0.10.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "extract-msg>=0.45.0",
    "pytesseract>=0.3.10",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "httpx", "ruff>=0.1.0", "playwright>=1.40.0", "pytest-playwright>=0.4.0"]
